Fix scrollbar placement

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -25,8 +25,6 @@ body {
 main, footer {
 	width: 80%;
 	max-width: 1000px;
-	padding-left: 10px;
-	padding-right: 10px;
 }
 main {
 	max-height: min(550px, 70%);
